<resources>
    <string name="app_name">铭邦物流</string>
    <string name="information">消息</string>
    <string name="work">工作</string>
    <string name="contacts">通讯录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="inputAccount">请输入账号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputAssurePs">请再次输入密码</string>
    <string name="clientRegister">客户注册</string>
    <string name="forgetPs">忘记密码</string>
    <string name="companyName">贵州省铭邦运输有限公司</string>
    <string name="post">提交</string>
    <string name="exit_login">退出登录</string>
    <string name="change_pw">修改密码</string>
    <string name="search">搜索</string>
    <string name="attendanceManage">考勤管理</string>
    <string name="attendance">考勤打卡</string>
    <string name="accidentHandler">事故处理</string>
    <string name="financialStatement">财务报表</string>
    <string name="approveNotification">审批通知</string>
    <string name="daily">日报</string>
    <string name="weekly">周报</string>
    <string name="monthly">月报</string>
    <string name="quarterly">季报</string>
    <string name="semiyearly">半年报</string>
    <string name="yearly">年报</string>
    <string name="approvalManage">审批管理</string>
    <string name="indentApproval">订单审批</string>
    <string name="adjustPrice">调价审批</string>
    <string name="informationQuery">信息查询</string>
    <string name="staffInformation">员工信息</string>
    <string name="carInformation">车辆信息</string>
    <string name="driversInformation">司机信息</string>
    <string name="tenderInformation">招标信息</string>
    <string name="clientsInformation">客户信息</string>
    <string name="indentInformation">订单信息</string>
    <string name="freightInformation">货运信息</string>
    <string name="warehouseInformation">仓库信息</string>
    <string name="myPerformance">我的绩效</string>
    <string name="incomeAndExpenses">车辆收支</string>
    <string name="logisticsInformation">物流信息</string>
    <string name="staffPerformance">员工绩效</string>
    <string name="salesmanWork">销售员任务</string>
    <string name="saleCargo">可售货物</string>
    <string name="staffAttendance">员工考勤</string>
    <string name="informationEntry">信息录入</string>
    <string name="singleWayInformation">单程信息</string>
    <string name="cargoInformation">货物信息</string>
    <string name="taskManage">任务管理</string>
    <string name="taskSetting">任务设置</string>
    <string name="orderManage">订单管理</string>
    <string name="recordRealSend">记录实发</string>
    <string name="recordRealGet">记录实收</string>
    <string name="writeOrder">填写订单</string>
    <string name="carManage">车辆管理</string>
    <string name="accidentHandling">事故处理</string>
    <string name="tenderManage">招标管理</string>
    <string name="issueTender">发布招标</string>
    <string name="reimbursementManage">报销管理</string>
    <string name="reimbursement">报销</string>
    <string name="custom">客户</string>
    <string name="innearContacts">内部联系人</string>
    <string name="staffInforQuery">员工信息查询</string>
    <string name="carInforQuery">车辆信息查询</string>
    <string name="driverInforQuery">司机信息查询</string>
    <string name="cancel">取消</string>
    <string name="asure">确定</string>
    <string name="clockIn">上班打卡</string>
    <string name="my">我的</string>
    <string name="submit">提交</string>
    <string name="get_unit">收货单位</string>
    <string name="get_address">收货地址</string>
    <string name="send_unit">发货单位</string>
    <string name="send_address">发货地址</string>
    <string name="standard">规格</string>
    <string name="brand">品牌</string>
    <string name="packaging">包装</string>
    <string name="cargo_gross">货物总量</string>
    <string name="input">请输入</string>
    <string name="staffInforEntry">员工信息录入</string>
    <string name="name">姓名</string>
    <string name="idNumber">身份证号</string>
    <string name="address">住址</string>
    <string name="photo">照片</string>
    <string name="upload">请上传</string>
    <string name="department">部门</string>
    <string name="position">职位</string>
    <string name="contactWay">联系方式</string>
    <string name="educationBackground">学历</string>
    <string name="graduateSchool">毕业学校</string>
    <string name="payScale">工资标准</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="nation">民族</string>
    <string name="politicsStatus">政治面貌</string>
    <string name="urgenContactName">紧急联系人姓名</string>
    <string name="urgenContactPhone">紧急联系人电话</string>
    <string name="urgenContactRelation">紧急联系人关系</string>
    <string name="familyMember">家庭成员</string>
    <string name="martialStatus">婚姻状况</string>
    <string name="isIntroduce">是否经人介绍</string>
    <string name="introducerName">介绍人姓名</string>
    <string name="introducerRelationship">与介绍人关系</string>
    <string name="introducerWorkUnit">介绍人工作单位</string>
    <string name="introducerPhone">介绍人电话</string>
    <string name="driverInforEntry">司机信息录入</string>
    <string name="pleaseWrite">请填写</string>
    <string name="pleaseSelect">请选择</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="businessLicense">营业执照</string>
    <string name="carInforEntry">车辆信息录入</string>
    <string name="plateNumber">车牌号</string>
    <string name="area">地区</string>
    <string name="payDate">购入日期</string>
    <string name="usedTime">已用时间</string>
    <string name="singleInforEntry">单程信息录入</string>
    <string name="sendNumber">发货数量</string>
    <string name="mealFee">餐补</string>
    <string name="oilCost">油费</string>
    <string name="accommodationFee">住宿费</string>
    <string name="maintainFee">维修费</string>
    <string name="orderInforSearch">订单信息查询</string>
    <string name="query">查询</string>
    <string name="startDate">起始日期</string>
    <string name="endDate">结束日期</string>
    <string name="orderNumber">订单号</string>
    <string name="clientName">客户名</string>
    <string name="cargoInforEntry">货物信息录入</string>
    <string name="designation">名称</string>
    <string name="reimbursementSum">报销金额</string>
    <string name="reimbursementProject">报销项目</string>
    <string name="time">时间</string>
    <string name="site">地点</string>
    <string name="bill">票据</string>
    <string name="cargoName">货物名称</string>
    <string name="destination">目的地</string>
    <string name="cargoWeight">重量</string>
    <string name="stopDate">截止时间</string>
    <string name="produceTwoDimensionalCode">生成二维码</string>
    <string name="driverName">司机姓名</string>
    <string name="accidentPayMoney">事故赔偿金</string>
    <string name="insurancePayMoney">保险赔偿金</string>
    <string name="carIncomeExpenseQuery">车辆收支查询</string>
    <string name="today">今日</string>
    <string name="staffAttendQuery">员工考勤查询</string>
    <string name="noQueryResult">无查询结果</string>
    <string name="inputOrderNum">请输入订单编号</string>
    <string name="orderNum">订单编号</string>
    <string name="createTime">创建时间</string>
    <string name="client">客户</string>
    <string name="cargo">货物</string>
    <string name="number">数量</string>
    <string name="totalPrice">总价</string>
    <string name="ensureMan">确定人</string>
    <string name="ensureTime">确定时间</string>
    <string name="factSendNum">实发数</string>
    <string name="factGetNum">实收数</string>
    <string name="administratorFunction">管理员功能</string>
    <string name="permissionSetting">权限设定</string>
    <string name="creditLimitsOnCredit">赊信额度</string>
    <string name="finance">财务</string>
    <string name="teamLeader">车队负责人</string>
    <string name="driver">司机</string>
    <string name="yardman">调度员</string>
    <string name="deliveryStaff">发货员</string>
    <string name="finish">完成</string>
    <string name="inforWatch">信息查看</string>
    <string name="inforEntry">信息录入</string>
    <string name="watchStaffInfor">查看客户信息</string>
    <string name="watchWarehouseInfor">查看仓库信息</string>
    <string name="creditLimitsSetting">赊信额度设定</string>
    <string name="inputStaffName">请输入客户名</string>
    <string name="staffName">客户名</string>
    <string name="creditLimits">赊信额度</string>
    <string name="usedCreditLimits">已用赊信额度</string>
    <string name="residueCreditLimits">剩余赊信余额</string>
    <string name="newCreditLimits">新的赊信额度</string>
    <string name="cargoAdjustPrice">货物调价</string>
    <string name="inputCargoName">请输入货物名</string>
    <string name="priceName">货物名</string>
    <string name="originalPrice">原价</string>
    <string name="priceFloat">价格浮动</string>
    <string name="tenderInforQuery">招标信息查询</string>
    <string name="untreated">未处理</string>
    <string name="processed">已处理</string>
    <string name="staffPerformanceQuery">员工绩效查询</string>
    <string name="myPerformanceQuery">我的绩效查询</string>
    <string name="saleCargoQuery">可售货物查询</string>
    <string name="thisMonth">本月</string>
    <string name="noSort">不排序</string>
    <string name="performanceFromTopToBottom">绩效由高到低</string>
    <string name="performanceFromBottomToTop">绩效由低到高</string>
    <string name="salemanTaskQuery">销售员任务查询</string>
    <string name="scheduleTopToBottom">进度由高到低</string>
    <string name="scheduleBottomToTop">进度由低到高</string>
    <string name="finishTopToBottom">完成度由高到低</string>
    <string name="finishBottomToTop">完成度由低到高</string>
    <string name="moneyTopToBottom">金额由高到低</string>
    <string name="moneyBottomToTop">金额由低到高</string>
    <string name="clientInforQuery">客户信息查询</string>
    <string name="salemanTaskSet">销售员任务设置</string>
</resources>